Fixes clear issue on post pagination (on small screens)

--- a/greenimpbase/style.css
+++ b/greenimpbase/style.css
@@ -117,6 +117,10 @@ footer.entry-meta{
 	clip:rect(1px, 1px, 1px, 1px);
 }
 
+#nav-below{
+	overflow:hidden;
+}
+
 
 
 /* ==========================================================================
